[metadata]
name = slackclipper
version = 0.1.0
url = https://github.com/hraftery/slackclipper
author = Heath Raftery
author_email = heath@empirical.ee
description = Copy the contents of a Slack thread.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
py_modules = slackclipper
python_requires = >=3.7
install_requires =
    slacktokens # Takes care of leveldb and pycookiecheat-slack dependencies.
                # Developed in lockstep, so safe to require latest.
    requests==2.27.1
    pyperclip==1.8.2

[options.entry_points]
console_scripts =
    slackclipper = slackclipper:main
